# workload-insight-tool

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt
syswit/: __init__.py  aggregate_results.py  analyzer.py  collector.py  collector_helper.py  comparator.py  main.py  result_parser.py  utils.py
syswit/collector_configs/: input.yaml  numa.yaml
syswit/tool_configs/: metric_separator.yaml  special_parser_helper.yaml
